# cool-chic

./: .gitignore  .pre-commit-config.yaml  README.md  batch-sbatch.sh  batch-submit.sh  bpp_no_cchic.py  build.py  gen_kodim_config.py  openimages-sbatch.sh  pyproject.toml  run-hypernet.sh  run-latent-script.sh  setup.py  submit-coolchic-encoding.sh  submit-cpu.sh  submit-job.sh  submit-simpler-enc.sh
cfg/enc/: fast.cfg
cfg/exps/2024-11-07/: basic.yaml  using_preset.yaml
cfg/exps/2024-11-12/: basic.yaml
cfg/exps/2024-11-15/: kodim01.yaml  kodim02.yaml  kodim03.yaml  kodim04.yaml  kodim05.yaml  kodim06.yaml  kodim07.yaml  kodim08.yaml  kodim09.yaml  kodim10.yaml  kodim11.yaml  kodim12.yaml  kodim13.yaml  kodim14.yaml  kodim15.yaml  kodim16.yaml  kodim17.yaml  kodim18.yaml  kodim19.yaml  kodim20.yaml  kodim21.yaml  kodim22.yaml  kodim23.yaml  kodim24.yaml
cfg/exps/2024-11-21/: kodim_template.yamltemplate
cfg/exps/additive-hn/: first.yaml
cfg/exps/basic_hn/: 100k.yaml  100k_50.yaml  10k.yaml  10k_50.yaml  aggressive_schedule.yaml  first.yaml  longer.yaml  longer_10k.yaml  longer_10k_50.yaml  longer_schedule.yaml  noise_schedule.yaml  p128_10k.yaml  p128_10k_50.yaml  unfr_sched_500k.yaml  unfr_sched_500k_50.yaml  unfreeze_100k.yaml  unfreeze_100k_50.yaml  unfreeze_500k.yaml  unfreeze_500k_50.yaml
cfg/exps/big-rerun/: 0lambda.yaml  control.yaml  control_18.yaml
cfg/exps/debug/: debug.yaml  debug_long.yaml
cfg/exps/delta-hn/: control.yaml  debug-load.yaml  debug.yaml  debug_batch.yaml  imperfect_init.yaml  leaky-relu.yaml  like_no_cchic.yaml  loading_no_coolchic.yaml  only_synth.yaml  tuneitall.yaml  unfreeze_later.yaml  with_recipe.yaml
cfg/exps/diff-hn/: test_run.yaml
cfg/exps/hn_debug/: debug.yaml  delta_debug.yaml  no_cchic_debug.yaml
cfg/exps/latent-then-all/: config_template.yamltemplate
coolchic/: bpp_no_cchic.py  decode.py  delta_hypernet_train.py  encode.py  encode_bare.py  encode_simpler.py  get_after_encoding_rate.py  hypernet_train.py  metalearning.py  no_coolchic_train.py  retrain_latents.py  types.py
coolchic/dec/: nn.py
coolchic/eval/: bd_rate.py  hypernet.py  plotting.py  results.py
coolchic/full_hypernet/: finetune.py  hypernet.py  inference.py
coolchic/hypernet/: analysis.py  arm.py  backbone.py  common.py  delta_hypernet.py  finetune.py  hypernet.py  inference.py  latent.py  synthesis.py  training.py  upsampling.py
coolchic/metalearning/: data.py  inner_loop.py  model.py  training_data.py
coolchic/utils/: bjontegaard_metric.py  coolchic_types.py  get_best_models.py  nn.py  paths.py  structs.py  tensors.py  types.py
data/data_generation_scripts/: clic20-pro-valid.py  kodak.py
docs/source/: conf.py
notebooks/: ablations.ipynb  delta_range.ipynb  gettsv.ipynb  plots.ipynb
notebooks/.ipynb_checkpoints/: delta_range-checkpoint.ipynb  plots-checkpoint.ipynb
preset_cfg/: c3x.yaml  debug.yaml
results/: decode_one_dataset.py
sbatch-files/: batch-sbatch.sh  latent-sbatch.sh  run-ablation.sh  run-additive.sh  run-delta.sh  run-diff.sh  run-finetuning.sh  run-hypernet.sh  run-nocchic.sh  run-real-rates.sh  run-small.sh
scripts/: all_hypernet_plots.py  copy_new_results.py  estimate_flops.py  finetune_all_configs.sh  gen_config_lambdas.py  gen_kodim_config.py  generate_rd_plots.py  get_after_encoding_rate.py  hypernet_training_debug_early_training.py  install_awscli.sh  join_results_into_summary.py  launch.sh  load_analysis.py  plot_bd_rate_n_itr.py  plot_hypernet_rd.py  premature_hnet_eval.py  run_ablation_evals.py  time_config_gen.py
test/: sanity_check.py
(+308 files in other folders)
