[project]
name="coolchic"
version="3.4.0"
authors =[{"name"= "Theo Ladune", "email"= "theo.ladune@orange.com"}]
# url="https://github.com/Orange-OpenSource/Cool-Chic"
description="Cool-Chic: lightweight neural video codec."
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "einops",
    "fvcore",
    "cmake",
    "psutil",
    "pytest",
    "pytest-order",
    "wandb",
    "pydantic",
    "python-build",
    "ruff>=0.7.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=42", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[tool.uv]

[tool.pyright]
include = ["coolchic/"]
